--- a/src/Card.css
+++ b/src/Card.css
@@ -1,6 +1,12 @@
 .card {
-	width: 50px;
-	height: 50px;
+	height: 150px;
 	background-color: brown;
 	padding: 0;
+	border-radius: 5px;
+	border: 1px solid black;
+	pointer-events: auto;
+}
+.image,
+.title {
+	pointer-events: none;
 }
