--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
 	margin: 0 auto;
 	padding: 2rem;
 	text-align: center;
+	background-color: #f00;
+	height: 100vh;
+	overflow: hidden;
 }
 
 .logo {
